--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -1,11 +1,12 @@
 imports:
+    - { resource: config_user.yml }
     - { resource: parameters.yml }
     - { resource: security.yml }
     - { resource: services.yml }
 
 framework:
     #esi:             ~
-    #translator:      { fallbacks: ["%locale%"] }
+    translator:      { fallbacks: ["%locale%"] }
     secret:          "%secret%"
     router:
         resource: "%kernel.root_dir%/config/routing.yml"
