--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -22,7 +22,8 @@ framework:
     trusted_proxies: ~
     session:
         # handler_id set to null will use default session handler from php.ini
-        handler_id:  ~
+        # handler_id:  ~
+        name:   FTPROSPECTSESSID
     fragments:       ~
     http_method_override: true
 
