--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -22,8 +22,9 @@ framework:
     trusted_proxies: ~
     session:
         # handler_id set to null will use default session handler from php.ini
-        # handler_id:  ~
-        name:   FTPROSPECTSESSID
+        handler_id:  ~
+        name:   ftprospect_session
+        save_path: "%kernel.root_dir%/sessions"
     fragments:       ~
     http_method_override: true
 
