--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -2,6 +2,10 @@ app:
     resource: @AppBundle/Controller/
     type:     annotation
 
+homepage:
+    path:      /
+    defaults:  { _controller: AppBundle:Default:index }
+
 
 fos_user:
     resource: "@FOSUserBundle/Resources/config/routing/all.xml"
